--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,10 +6,13 @@ services:
     ports:
       - "3000:3000"
     environment:
-      PGRST_DB_URI: postgres://${PGUSER}:${PGPASSWORD}@postgres:5432/${PGDATABASE}
+      PGRST_DB_URI: postgres://authenticator:apple-desk-pen-13@postgres:5432/${PGDATABASE}
       PGRST_OPENAPI_SERVER_PROXY_URI: http://127.0.0.1:3000
+      PGRST_DB_SCHEMAS: api
+      PGRST_DB_ANON_ROLE: web_anon
     depends_on:
-      - postgres
+      flyway:
+        condition: service_completed_successfully
   postgres:
     image: postgres
     container_name: postgres
@@ -21,6 +24,11 @@ services:
       POSTGRES_DB: ${PGDATABASE}
       POSTGRES_USER: ${PGUSER}
       POSTGRES_PASSWORD: ${PGPASSWORD}
+    healthcheck:
+      test: ["CMD", "pg_isready"]
+      interval: 1s
+      timeout: 5s
+      retries: 5
   # Uncomment this if you want to persist the data.
   # volumes:
   #   - "./pgdata:/var/lib/postgresql/data"
@@ -31,3 +39,15 @@ services:
       - "8080:8080"
     environment:
       API_URL: http://localhost:3000/
+  flyway:
+    image: flyway/flyway
+    container_name: flyway
+    command: -user=${PGUSER} -password=${PGPASSWORD} migrate
+    volumes:
+      - ./sql:/flyway/sql
+    environment:
+      FLYWAY_LOCATIONS: filesystem:/flyway/sql
+      FLYWAY_URL: jdbc:postgresql://postgres:5432/${PGDATABASE}
+    depends_on:
+      postgres:
+        condition: service_healthy
