Accept JWT tokens in postgrest

--- a/.envrc
+++ b/.envrc
@@ -1,3 +1,4 @@
 export PGUSER=app_user
 export PGDATABASE=app_db
 export PGPASSWORD=app_pass
+export JWT_SECRET=Your8password8must8be8at8least8328characters8long
