--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,6 @@
 version: '3'
 services:
-  server:
+  postgrest:
     image: postgrest/postgrest
     container_name: postgrest
     ports:
@@ -10,6 +10,7 @@ services:
       PGRST_OPENAPI_SERVER_PROXY_URI: http://127.0.0.1:3000
       PGRST_DB_SCHEMAS: api
       PGRST_DB_ANON_ROLE: web_anon
+      PGRST_JWT_SECRET: ${JWT_SECRET}
     depends_on:
       shmig:
         condition: service_completed_successfully
