--- a/pgquarrel.conf
+++ b/pgquarrel.conf
@@ -7,7 +7,7 @@ security-labels = false
 owner = true
 privileges = true
 ignore-version = false
-single-transaction = true
+single-transaction = false
 
 access-method = false
 aggregate = false
