add pgjwt extension

--- a/pgquarrel.conf
+++ b/pgquarrel.conf
@@ -16,7 +16,7 @@ collation = false
 conversion = false
 domain = true
 event-trigger = false
-extension = false
+extension = true
 fdw = false
 foreign-table = false
 function = true
@@ -39,7 +39,7 @@ trigger = true
 type = true
 view = true
 
-include-schema = ^(api|sales)$
+include-schema = ^(api|basic_auth|pgjwt)$
 exclude-schema = ^public$
 
 [target]
