include public schema changes

--- a/flyway.conf
+++ b/flyway.conf
@@ -1,3 +1,5 @@
 flyway.url=jdbc:postgresql://postgres:5432/${PGDATABASE}
 flyway.user=${PGUSER}
 flyway.password=${PGPASSWORD}
+flyway.createSchemas=true
+flyway.schemas=my_schema
