--- a/pgquarrel.conf
+++ b/pgquarrel.conf
@@ -39,8 +39,8 @@ trigger = true
 type = true
 view = true
 
-include-schema = ^(api|basic_auth|pgjwt)$
-exclude-schema = ^public$
+include-schema = ^(api|basic_auth|pgjwt|public)$
+exclude-schema = ^none$
 
 [target]
 host = 127.0.0.1
